# polymarket

./: .env.example  .gitignore  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
analysis/: README.md  resolution_bias.py
polybot/: __init__.py  __main__.py  config.py  constants.py
polybot/cli/: app.py
polybot/cli/commands/: markets.py  positions.py  trading.py  wallet.py
polybot/clients/: __init__.py  clob.py  data.py  gamma.py
polybot/models/: __init__.py  market.py  order.py
polybot/strategies/: __init__.py  base.py
polybot/trading/: __init__.py  orders.py  trade_log.py
polybot/utils/: errors.py  formatting.py  logging.py
polybot/wallet/: __init__.py  manager.py
scripts/: check_connection.py  generate_wallet.py
tests/: conftest.py
tests/e2e/: test_buy_sell_flow.py
tests/integration/: test_clob_read.py  test_gamma_client.py
tests/unit/: test_config.py  test_formatting.py  test_models.py  test_orders.py  test_trade_log.py
